2022-01-23 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/src/mos6502/ralloc.c,
      sdcc/src/mos6502/ralloc.h:
      Update opcode table and unified opcode size code.

2022-01-22 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Use code gen functions instead of raw assembly when possible.

2022-01-21 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/peep.def:
      Improved 6502 peephole rules.

2022-01-20 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Add instruction cost as asm comments.

2022-01-20 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/main.c:
      Correctly compute instruction distance when asm lines contain comments.

2022-01-20 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/main.c:
      Fix m6502_instructionSize.

2022-01-20 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/main.c:
      Cleanup m6502opcodedata.

2022-01-20 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/SDCCpeeph.c:
      Allow peephole rules to match asm lines with comments.

2022-01-18 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/peep.def:
      Initial MOS6502 peephole rules.

2022-01-18 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix out of range branch in genCmpEQorNE.

2022-01-18 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix AX->XA bug in loadRegFromAop.

2022-01-18 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve pusReg/PullReg.

2022-01-18 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve dry_run_cost accuracy.

2022-01-17 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Refactor dry_run_cost computation.

2022-01-17 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve debug messages.

2022-01-17 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c: